--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+  scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -88,11 +92,11 @@ body {
 .image-container {
     box-shadow: 5px 5px 7px rgba(0,0,0,0.3);
     border: 5px solid rgba(0,0,0);
-    width: 750px;
-    height: 950px;
+    width: 550px;
+    height: 750px;
     position: fixed;
     top: 650px;
-    left: 170px;
+    left: 270px;
     overflow: hidden;
     opacity: 0;
     animation: fadeIn 5.9s ease-in-out forwards;
@@ -129,8 +133,8 @@ body {
     cursor: pointer;
     outline: none;
     position: fixed;
-    top:1700px;
-    left: 390px;
+    top:1400px;
+    left: 400px;
     padding: 10px;
     }
   
@@ -139,7 +143,8 @@ body {
     border-radius: 1000px;
     min-width: calc(300px + 12px);
     min-height: calc(60px + 12px);
-    border: 6px solid rgba(241,9,241,1);
+    border: 6px solid rgba(241,9,241,1
+    );
     box-shadow: 0 0 60px rgba(241,9,241,.64);
     position: absolute;
     top: 50%;
@@ -208,7 +213,6 @@ body {
     }
     
 }
-
 
 
 
